# datacation-chatbot-workspace

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  README.md  chainlit.yaml  chat_app.py  config.py  create_titanic_db.py  env.example  pyproject.toml  pytest.ini  requirements-test.txt  show_schema.py  test_gemini_api_500.py  test_titanic_agent.py  test_titanic_db.py  titanic_cli.py
.chainlit/: config.toml
.cursor/rules/: git-commit-messages.mdc  insights.mdc  language-preference.mdc  markdown.mdc  mdc.mdc
.devcontainer/: Dockerfile  devcontainer.json
data_pipeline/: __init__.py  inspect_titanic_dataset.py  titanic_pipeline.py
docs/: CHAINLIT.md  ENVIRONMENT.md  PANDAS_TOOL.md  PRE-COMMIT.md  PREFECT.md  cursor_rules.md  mdc.mdc
notebooks/: workshop_part_1.ipynb  workshop_part_2.ipynb
public/: custom.js  theme.json
scripts/: notebook_1.py  notebook_2.py  titanic_data_analyst_cli.py
tests/: conftest.py  test_chat.py  test_titanic.py  test_utils.py
tools/: __init__.py  database.py  knowledge.py  pandas_tools.py  show_schema.py  test_database.py  titanic_agent.py  titanic_cli.py  titanic_pandas_tool.py  titanic_tool.py
tools/agents/: pandas_agent.py
utils/: code_runner.py  directory_utils.py  logger.py  notebook_runner.py
