[project]
name = "chatbot-workshop"
version = "2025.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.5.5",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-google-genai>=2.1.3",
    "langgraph>=0.4.3",
    "ruff>=0.11.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chatbot_workshop"]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.1",
]
