[project]
name = "chatbot-workshop"
version = "2025.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.5.5",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-google-genai>=2.1.3",
    "langgraph>=0.4.3",
    "nbstripout>=0.8.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.8",
    "detect-secrets>=1.4.0",
    "duckduckgo-search>=8.0.1",
    "datasets>=3.6.0",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.40",
]

[project.scripts]
chat = "chat_app:main"
test-titanic = "test_titanic_db:test_titanic_queries"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chatbot_workshop"]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.1",
]

[tool.ruff]
line-length = 132
target-version = "py311"
select = ["E", "W"]
ignore = ["E501"]
fixable = ["W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = true
docstring-code-format = false
docstring-code-line-length = "dynamic"
